[tool.poetry]
name = "sinch-intent-detection"
version = "0.1.0"
description = ""
authors = ["clementw168 <clementwang2001@gmail.com>"]
readme = "README.md"
packages = [{include = "sinch_intent_detection"}]

[tool.poetry.dependencies]
python = "3.10.5"
numpy = "^1.23.4"
pandas = "^1.5.1"
sklearn = "^0.0"
xgboost = "^1.6.2"
tensorflow = "^2.10.0"
tensorflow-addons = "^0.18.0"
pyarrow = "^9.0.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"
matplotlib = "^3.6.1"
black = {extras = ["jupyter"], version = "^22.10.0"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
profile = "black"
